use angular-cli

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>Leben pur Fotografie</title>
   <meta name="theme-color" content="#D56156">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" type="image/x-icon" href="/static/lebenpur.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="/src/favicon.ico" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
@@ -14,6 +14,7 @@
     body {
       font-family: Open Sans;
     }
+
   </style>
 </head>
 
