--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <base href="https://OozmaKappa.github.io/LP/">
+  <base href="/Users/d055406/Documents/Privat/lebenpur2">
   <title>Leben pur Fotografie</title>
   <meta name="theme-color" content="#D56156">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,10 +16,10 @@
     }
 
   </style>
-<link href="styles.d41d8cd98f00b204e980.bundle.css" rel="stylesheet"/></head>
+<link href="styles.bundle.css" rel="stylesheet"/></head>
 
 <body>
   <my-app></my-app>
-<script type="text/javascript" src="inline.856a93e49902ef58609b.bundle.js"></script><script type="text/javascript" src="polyfills.68caa3899beffbf1104e.bundle.js"></script><script type="text/javascript" src="vendor.6e24d9b80b34bc1b8ec1.bundle.js"></script><script type="text/javascript" src="main.26ffd620db84aabf460f.bundle.js"></script></body>
+<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
 
 </html>
