--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     }
 
   </style>
-<link href="styles.bundle.css" rel="stylesheet"/></head>
+<link href="styles.d41d8cd98f00b204e980.bundle.css" rel="stylesheet"/></head>
 
 <body>
   <my-app></my-app>
-<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
+<script type="text/javascript" src="inline.163e33e18e08d6cc484c.bundle.js"></script><script type="text/javascript" src="polyfills.915394af42f001733d15.bundle.js"></script><script type="text/javascript" src="vendor.077506622f87c75fc209.bundle.js"></script><script type="text/javascript" src="main.029eb1526a7c55c9eca1.bundle.js"></script></body>
 
 </html>
