--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <base href="/Users/d055406/Documents/Privat/lebenpur2">
+  <base href="/LP/">
   <title>Leben pur Fotografie</title>
   <meta name="theme-color" content="#D56156">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,6 +20,6 @@
 
 <body>
   <my-app></my-app>
-<script type="text/javascript" src="inline.163e33e18e08d6cc484c.bundle.js"></script><script type="text/javascript" src="polyfills.915394af42f001733d15.bundle.js"></script><script type="text/javascript" src="vendor.077506622f87c75fc209.bundle.js"></script><script type="text/javascript" src="main.029eb1526a7c55c9eca1.bundle.js"></script></body>
+<script type="text/javascript" src="inline.678e8e5ef229520fd13d.bundle.js"></script><script type="text/javascript" src="polyfills.915394af42f001733d15.bundle.js"></script><script type="text/javascript" src="vendor.077506622f87c75fc209.bundle.js"></script><script type="text/javascript" src="main.41a132f3990843c84535.bundle.js"></script></body>
 
 </html>
