--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <base href="/LP/">
+  <base href="/">
   <title>Leben pur Fotografie</title>
   <meta name="theme-color" content="#D56156">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,16 +10,19 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
   <style type="text/css">
     body {
       font-family: Open Sans;
     }
 
   </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="styles.d41d8cd98f00b204e980.bundle.css" rel="stylesheet"/></head>
 
 <body>
-  <my-app></my-app>
-<script type="text/javascript" src="inline.a3118fddaff1d906c4bd.bundle.js"></script><script type="text/javascript" src="polyfills.915394af42f001733d15.bundle.js"></script><script type="text/javascript" src="vendor.077506622f87c75fc209.bundle.js"></script><script type="text/javascript" src="main.517e618dbd06fbbbd579.bundle.js"></script></body>
+  <app-lp></app-lp>
+<script type="text/javascript" src="inline.12da2f057c48730d9e1c.bundle.js"></script><script type="text/javascript" src="polyfills.915394af42f001733d15.bundle.js"></script><script type="text/javascript" src="vendor.bce0da01228943044dcd.bundle.js"></script><script type="text/javascript" src="main.9e47b3c3adbe4bc605df.bundle.js"></script></body>
 
 </html>
