--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <base href="/">
+  <base href="/LP/">
   <title>Leben pur Fotografie</title>
   <meta name="theme-color" content="#D56156">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,6 +23,6 @@
 
 <body>
   <app-lp></app-lp>
-<script type="text/javascript" src="inline.12da2f057c48730d9e1c.bundle.js"></script><script type="text/javascript" src="polyfills.915394af42f001733d15.bundle.js"></script><script type="text/javascript" src="vendor.bce0da01228943044dcd.bundle.js"></script><script type="text/javascript" src="main.9e47b3c3adbe4bc605df.bundle.js"></script></body>
+<script type="text/javascript" src="inline.b6839068a6d5a043762d.bundle.js"></script><script type="text/javascript" src="polyfills.915394af42f001733d15.bundle.js"></script><script type="text/javascript" src="vendor.bce0da01228943044dcd.bundle.js"></script><script type="text/javascript" src="main.f923b93efa1f1503efcf.bundle.js"></script></body>
 
 </html>
