--- a/index.html
+++ b/index.html
@@ -1,28 +1,3 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <base href="/LP/">
-  <title>Leben pur Fotografie</title>
-  <meta name="theme-color" content="#D56156">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" type="image/x-icon" href="/src/favicon.ico" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-
-  <style type="text/css">
-    body {
+<!DOCTYPE html><html><head><base href="/LP/"><title>Leben pur Fotografie</title><meta name="theme-color" content="#D56156"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="shortcut icon" type="image/x-icon" href="/src/favicon.ico"/><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css"><link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet"><link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"><style type="text/css">body {
       font-family: Open Sans;
-    }
-
-  </style>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="styles.d41d8cd98f00b204e980.bundle.css" rel="stylesheet"/></head>
-
-<body>
-  <app-lp></app-lp>
-<script type="text/javascript" src="inline.980b28d3e68e03547ea1.bundle.js"></script><script type="text/javascript" src="polyfills.915394af42f001733d15.bundle.js"></script><script type="text/javascript" src="vendor.bce0da01228943044dcd.bundle.js"></script><script type="text/javascript" src="main.86ff30f760244b31bbc1.bundle.js"></script></body>
-
-</html>
+    }</style><meta name="viewport" content="width=device-width,initial-scale=1"><link href="styles.d41d8cd98f00b204e980.bundle.css" rel="stylesheet"/></head><body><app-lp></app-lp><script type="text/javascript" src="inline.0961649303ffb56befae.bundle.js"></script><script type="text/javascript" src="polyfills.915394af42f001733d15.bundle.js"></script><script type="text/javascript" src="vendor.be3f47a2cb2737ce043c.bundle.js"></script><script type="text/javascript" src="main.1afc4466ef872f0d16a8.bundle.js"></script></body></html>
