--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <base href="/">
-  <title>Leben pur Fotografie</title>
+  <title>Leben Pur FOTOGRAFIE</title>
   <meta name="theme-color" content="#D56156">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/x-icon" href="/src/favicon.ico" />
